# performative-recourse-experiments

./: LICENSE  README.md  pyproject.toml  python_environment.txt
recourse/: __init__.py  applications.py  dgps.py  distutils.py  recourse.py  scm.py  viz.py
scripts/: helper_converttojson.py  helper_visualizedgp.py  metarun_application.py  metarun_simulation.py  run_simulation.py  run_visualization.py
